<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    android:focusable="true">

    <!-- Glassmorphic Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardBlocking"
        style="@style/GlassmorphicCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xl"
        app:cardCornerRadius="@dimen/corner_radius_xl"
        app:cardElevation="@dimen/elevation_lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_xxl">

            <!-- Icon -->
            <ImageView
                android:id="@+id/ivBlockIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_blocked_title"
                android:src="@drawable/ic_block"
                app:tint="@color/primary_light" />

            <!-- Title -->
            <TextView
                android:id="@+id/tvBlockTitle"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/app_blocked_title"
                android:textAlignment="center" />

            <!-- Message -->
            <TextView
                android:id="@+id/tvBlockMessage"
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/app_blocked_message"
                android:textAlignment="center" />

            <!-- Time Remaining -->
            <TextView
                android:id="@+id/tvTimeRemaining"
                style="@style/TimerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xl"
                android:text="25:00"
                android:textSize="@dimen/text_huge" />

            <!-- Motivation Message -->
            <TextView
                android:id="@+id/tvMotivation"
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/motivation_message"
                android:textAlignment="center"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
